<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="p_SoftIO" Id="{08bd4e2d-3139-4f8e-b2bd-85fa0e412ded}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM p_SoftIO
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* Shakers *)
stSelector.stShaker01.i_xSwitch := iq_stM2SelectorA.i_EP2338_Ch5;
stSelector.stShaker02.i_xSwitch := iq_stM2SelectorA.i_EP2338_Ch6;
stSelector.stShaker03.i_xSwitch := iq_stM2SelectorA.i_EP2338_Ch7;
stSelector.stShaker04.i_xSwitch := iq_stM2SelectorA.i_EP2338_Ch8;

iq_stM2SelectorA.q_EP2338_Ch1	:= stSelector.stShaker01.q_xPwrDO;
iq_stM2SelectorA.q_EP2338_Ch2	:= stSelector.stShaker02.q_xPwrDO;
iq_stM2SelectorA.q_EP2338_Ch3	:= stSelector.stShaker03.q_xPwrDO;
iq_stM2SelectorA.q_EP2338_Ch4	:= stSelector.stShaker04.q_xPwrDO;

stSelector2.stShaker01.i_xSwitch := iq_stM2SelectorB.i_EP2338_Ch5;
stSelector2.stShaker02.i_xSwitch := iq_stM2SelectorB.i_EP2338_Ch6;
stSelector2.stShaker03.i_xSwitch := iq_stM2SelectorB.i_EP2338_Ch7;
stSelector2.stShaker04.i_xSwitch := iq_stM2SelectorB.i_EP2338_Ch8;

iq_stM2SelectorB.q_EP2338_Ch1	:= stSelector2.stShaker01.q_xPwrDO;
iq_stM2SelectorB.q_EP2338_Ch2	:= stSelector2.stShaker02.q_xPwrDO;
iq_stM2SelectorB.q_EP2338_Ch3	:= stSelector2.stShaker03.q_xPwrDO;
iq_stM2SelectorB.q_EP2338_Ch4	:= stSelector2.stShaker04.q_xPwrDO;

stRegProp1.iPressureRaw := iq_stPressCtrlA.i_EP4374_Ch1;
stRegProp2.iPressureRaw := iq_stPressCtrlA.i_EP4374_Ch2;

iq_stPressCtrlA.q_EP4374_Ch3 := stRegProp1.iSetpointRaw;
iq_stPressCtrlA.q_EP4374_Ch4 := stRegProp2.iSetpointRaw;

stRegProp3.iPressureRaw := iq_stPressCtrlB.i_EP4374_Ch1;
stRegProp4.iPressureRaw := iq_stPressCtrlB.i_EP4374_Ch2;

iq_stPressCtrlB.q_EP4374_Ch3 := stRegProp3.iSetpointRaw;
iq_stPressCtrlB.q_EP4374_Ch4 := stRegProp4.iSetpointRaw;]]></ST>
    </Implementation>
    <LineIds Name="p_SoftIO">
      <LineId Id="3" Count="24" />
      <LineId Id="34" Count="5" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>